This is the final set of CFLibDbKeyHash* classes, ready for integration test.  Once tested, any issues uncovered will be addressed, and this sub-package of CFLib will be complete.